app/src/db/repositories/worte_gram_type/snapshots/anki_sentences__db__repositories__worte_gram_type__worte_gram_type_test__test_worte_gram_type_repo__bulk_insert__run_bulk_insert_update_scenario-2.snap
---
source: app/src/db/repositories/worte_gram_type/worte_gram_type_test.rs
expression: res_1
---
[
    Snapshot {
        id_worte: 1,
        id_gram_type: 1,
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        id_worte: 1,
        id_gram_type: 2,
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        id_worte: 2,
        id_gram_type: 2,
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
